# wasm-interpreter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  prepare_tests.sh  run_tests.py
examples/: .gitignore  Makefile  control.wasm  control.wat  func1.wasm  func1.wat  increment_f32.wasm  increment_f32.wat  increment_i32.wasm  increment_i32.wat  memory.wasm  memory.wat  parametric.wasm  parametric.wat  test.c  test.wasm
src/: control.c  control.h  control_opcode_handlers.h  eval_types.h  exception.c  exception.h  handler.h  import.c  import.h  instruction.h  interpreter.c  interpreter.h  list.c  list.h  main.c  memory.c  memory.h  memory_opcode_handlers.h  module.h  numeric.c  numeric.h  numeric_opcode_handlers.h  opcode.h  opd_stack.c  opd_stack.h  parametric_opcode_handlers.h  parser.c  parser.h  primitive_vec_types.h  stack.c  stack.h  strings.h  table.c  table.h  test.c  test_exception.c  type.h  util.h  value.h  variable.c  (+4 more)
src/parser/: expression_parser.c  expression_parser.h  next.h  parser.c  parser.h  util.h
test/: const.wast
